--- a/deployment/db-configmap.yaml
+++ b/deployment/db-configmap.yaml
@@ -5,6 +5,6 @@ data:
   DB_NAME: "geoconnections"
   DB_HOST: "postgres"
   DB_PORT: "5432"
-  KAFKA_URL: "my-cluster.kafka.svc.cluster.local:9092"
+  KAFKA_URL: "localhost:9093"
 metadata:
   name: db-env
